--- a/values-production.yaml
+++ b/values-production.yaml
@@ -1,28 +1,72 @@
 # Production values for atom chart
 # This file contains production-ready values for the AtoM application
 
-global:
-  domain: "k8s-npr.es.gov.br"
-  imageRegistry: "registry.redhat.io"
-  storageClass: "ocs-storagecluster-ceph-rbd"
-  imagePullSecrets:
-    - name: registry-secret
+################################################################################
+#                          Configurações Gerais                                #
+################################################################################
+general:
+  # UID do usuário para execução dos contêineres
+  # Escolha este valor com base no intervalo permitido do seu projeto OpenShift
+  # (verifique a anotação openshift.io/sa.scc.uid-range)
+  user_uid: "1001490000"
 
-# AtoM application configuration
+  # Namespace para instalação (será substituído pelo namespace de lançamento)
+  namespace: npr-prodest-pds
+
+
+################################################################################
+#                   Configurações de segurança para OpenShift                  #
+################################################################################
+security:
+  # ServiceAccount para os pods
+  serviceAccount:
+    # create: true
+    name: "archivematica"
+  serviceAccountAnyUID:
+    # create: true
+    name: "anyuid"
+  # # SecurityContextConstraints para OpenShift
+  # scc:
+  #   # Usar SCC existente ou criar uma personalizada
+  #   # Valores possíveis: "restricted", "nonroot", "anyuid", "custom"
+  #   use: "anyuid"
+
+  #   # Nome da SCC personalizada (se use: "custom")
+  #   custom_name: "archivematica-scc"
+
+################################################################################
+#                  Configurações de rota para OpenShift                        #
+################################################################################
+route:
+  enabled: true
+  tls: true
+  hostname: "archivematica.k8s-npr.es.gov.br"
+  ss_hostname: "archivematica-dash.k8s-npr.es.gov.br"
+
+# global:
+#   domain: "k8s-npr.es.gov.br"
+#   imageRegistry: "registry.redhat.io"
+#   storageClass: "ocs-storagecluster-ceph-rbd"
+#   imagePullSecrets:
+#     - name: registry-secret
+
+################################################################################
+#                   Configurações AtoM application                             #
+################################################################################
 atom:
   replicaCount: 3
-  
+
   image:
     repository: "atom"
     pullPolicy: Always
     tag: "2.9.0"
-  
+
   env:
     developmentMode: "off"
     elasticsearchHost: "elasticsearch.elastic.svc.cluster.local"
     elasticsearchPort: "9200"
     elasticsearchProtocol: "https"
-    
+
   resources:
     limits:
       cpu: 2000m
@@ -31,10 +75,12 @@ atom:
       cpu: 1000m
       memory: 2Gi
 
-# AtoM worker configuration
+################################################################################
+#                   Configurações AtoM worker                                  #
+################################################################################
 atomWorker:
   replicaCount: 5
-  
+
   resources:
     limits:
       cpu: 1000m
@@ -43,10 +89,13 @@ atomWorker:
       cpu: 500m
       memory: 1Gi
 
-# Nginx configuration
+################################################################################
+#                   Configurações Nginx                                        #
+################################################################################
+
 nginx:
-  replicaCount: 2
-  
+  replicaCount: 1
+
   resources:
     limits:
       cpu: 1000m
@@ -54,18 +103,21 @@ nginx:
     requests:
       cpu: 500m
       memory: 256Mi
-  
+
   route:
     host: "atom-prod"
 
-# MySQL configuration
+################################################################################
+#                   Configurações MySQL                                        #
+################################################################################
+
 mysql:
   replicaCount: 1
-  
+
   auth:
     rootPassword: "secure-root-password-change-me"
     password: "secure-atom-password-change-me"
-    
+
   resources:
     limits:
       cpu: 4000m
@@ -73,15 +125,19 @@ mysql:
     requests:
       cpu: 2000m
       memory: 4Gi
-  
+
   persistence:
     enabled: true
     size: 100Gi
 
-# Memcached configuration
+
+################################################################################
+#                   Configurações Memcached                                    #
+################################################################################
+
 memcached:
   replicaCount: 2
-  
+
   resources:
     limits:
       cpu: 500m
@@ -90,10 +146,14 @@ memcached:
       cpu: 250m
       memory: 512Mi
 
-# Gearman configuration
+
+################################################################################
+#                   Configurações Gearman                                      #
+################################################################################
+
 gearman:
   replicaCount: 2
-  
+
   resources:
     limits:
       cpu: 1000m
@@ -102,48 +162,90 @@ gearman:
       cpu: 500m
       memory: 512Mi
 
-# Security context for production
-securityContext:
-  enabled: true
-  runAsNonRoot: true
-  runAsUser: 1001
-  fsGroup: 1001
 
-# Pod security context
-podSecurityContext:
-  enabled: true
-  runAsNonRoot: true
-  runAsUser: 1001
-  fsGroup: 1001
+# # Security context for production
+# securityContext:
+#   enabled: true
+#   runAsNonRoot: true
+#   runAsUser: 1001
+#   fsGroup: 1001
 
-# Resource quotas and limits
-nodeSelector:
-  node-role.kubernetes.io/worker: ""
+# # Pod security context
+# podSecurityContext:
+#   enabled: true
+#   runAsNonRoot: true
+#   runAsUser: 1001
+#   fsGroup: 1001
 
-# Tolerations for specific nodes
-tolerations:
-  - key: "dedicated"
-    operator: "Equal"
-    value: "atom"
-    effect: "NoSchedule"
+# # Resource quotas and limits
+# nodeSelector:
+#   node-role.kubernetes.io/worker: ""
 
-# Affinity rules for high availability
-affinity:
-  podAntiAffinity:
-    preferredDuringSchedulingIgnoredDuringExecution:
-      - weight: 100
-        podAffinityTerm:
-          labelSelector:
-            matchExpressions:
-              - key: app.kubernetes.io/name
-                operator: In
-                values:
-                  - atom
-          topologyKey: kubernetes.io/hostname
+# # Tolerations for specific nodes
+# tolerations:
+#   - key: "dedicated"
+#     operator: "Equal"
+#     value: "atom"
+#     effect: "NoSchedule"
 
-# OpenShift specific configurations
-openshift:
-  enabled: true
-  scc:
+# # Affinity rules for high availability
+# affinity:
+#   podAntiAffinity:
+#     preferredDuringSchedulingIgnoredDuringExecution:
+#       - weight: 100
+#         podAffinityTerm:
+#           labelSelector:
+#             matchExpressions:
+#               - key: app.kubernetes.io/name
+#                 operator: In
+#                 values:
+#                   - atom
+#           topologyKey: kubernetes.io/hostname
+
+# # OpenShift specific configurations
+# openshift:
+#   enabled: true
+#   scc:
+#     enabled: true
+#     name: "restricted"
+
+
+################################################################################
+#                     Configurações volumes compartilhados                     #
+################################################################################
+shared_volumes:
+  # Volume para dados do pipeline
+  pipeline_data:
     enabled: true
-    name: "restricted"
+    size: 2Gi
+    storageClass: ""
+    accessMode: ReadWriteMany
+
+  # Volume para dados de staging
+  staging_data:
+    enabled: true
+    size: 2Gi
+    storageClass: ""
+    accessMode: ReadWriteMany
+
+  # Volume para dados de localização
+  location_data:
+    enabled: true
+    size: 2Gi
+    storageClass: ""
+    accessMode: ReadWriteMany
+
+  # Volume para compartilhamento de transferência
+  transfer_share:
+    enabled: true
+    size: 2Gi
+    storageClass: ""
+    accessMode: ReadWriteMany
+
+  # Volume para compartilhamento de armazenamento
+  storage_share:
+    enabled: true
+    size: 2Gi
+    storageClass: ""
+    accessMode: ReadWriteMany
+
