--- a/templates/configmap.yaml
+++ b/templates/configmap.yaml
@@ -1,85 +1,87 @@
+{{/*
+ Create a ConfigMap for application configuration
+
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ include "atom.fullname" . }}-config
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "atom.labels" . | nindent 4 }}
-    app.kubernetes.io/component: config
+    {{- include "atom.component.labels" (list . "config") | nindent 4 }}
 data:
   ATOM_DEVELOPMENT_MODE: {{ .Values.atom.env.developmentMode | quote }}
   ATOM_ELASTICSEARCH_HOST: {{ .Values.atom.env.elasticsearchHost | quote }}
   ATOM_ELASTICSEARCH_PORT: {{ .Values.atom.env.elasticsearchPort | quote }}
   ATOM_ELASTICSEARCH_PROTOCOL: {{ .Values.atom.env.elasticsearchProtocol | quote }}
   ATOM_MEMCACHED_HOST: {{ include "atom.memcached.fullname" . | quote }}
-  ATOM_GEARMAND_HOST: {{ include "atom.gearman.fullname" . | quote }}
+  ATOM_GEARMAND_HOST: {{ include "atom.gearmand.fullname" . | quote }}
   ATOM_MYSQL_DSN: {{ include "atom.mysql.dsn" . | quote }}
   ATOM_MYSQL_USERNAME: {{ .Values.mysql.auth.username | quote }}
   NODE_ENV: "production"
 ---
+*/}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "atom.nginx.fullname" . }}-config
+  name: {{ include "atom.fullname" . }}-nginx-config
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "atom.labels" . | nindent 4 }}
-    app.kubernetes.io/component: nginx
+    {{- include "atom.component.labels" (list . "nginx") | nindent 4 }}
 data:
   nginx.conf: |
     user nginx;
     worker_processes auto;
     error_log /var/log/nginx/error.log warn;
     pid /var/run/nginx.pid;
-    
+
     events {
       worker_connections 1024;
     }
-    
+
     http {
       include /etc/nginx/mime.types;
       default_type application/octet-stream;
-      
+
       log_format main '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
-      
+
       access_log /var/log/nginx/access.log main;
       sendfile on;
       keepalive_timeout 65;
       gzip on;
-      
+
       upstream atom {
         server {{ include "atom.fullname" . }}:9000;
       }
-      
+
       server {
         listen 80;
         root /atom/src;
         server_name _;
         client_max_body_size 72M;
-        
+
         location / {
           try_files $uri /index.php?$args;
         }
-        
+
         location ~ /\. {
           deny all;
           return 404;
         }
-        
+
         location ~* (\.yml|\.ini|\.tmpl)$ {
           deny all;
           return 404;
         }
-        
+
         location ~* /(?:uploads|files)/.*\.php$ {
           deny all;
           return 404;
         }
-        
+
         location ~* /uploads/r/(.*)/conf/ { }
-        
+
         location ~* ^/uploads/r/(.*)$ {
           include /etc/nginx/fastcgi_params;
           set $index /index.php;
@@ -87,19 +89,19 @@ data:
           fastcgi_param SCRIPT_NAME $index;
           fastcgi_pass atom;
         }
-        
+
         location ~ ^/private/(.*)$ {
           internal;
           alias /atom/src/$1;
         }
-        
+
         location ~ ^/(index|qubit_dev)\.php(/|$) {
           include /etc/nginx/fastcgi_params;
           fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
           fastcgi_split_path_info ^(.+\.php)(/.*)$;
           fastcgi_pass atom;
         }
-        
+
         location ~* \.php$ {
           deny all;
           return 404;
@@ -110,11 +112,10 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "atom.mysql.fullname" . }}-config
+  name: {{ include "atom.fullname" . }}-mysql-config
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "atom.labels" . | nindent 4 }}
-    app.kubernetes.io/component: mysql
+    {{- include "atom.component.labels" (list . "mysql") | nindent 4 }}
 data:
   mysqld.cnf: |
     [mysqld]
