--- a/templates/deployments/deploy-nginx.yaml
+++ b/templates/deployments/deploy-nginx.yaml
@@ -1,22 +1,20 @@
+{{- if .Values.nginx.enabled }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "atom.nginx.fullname" . }}
+  name: {{ include "atom.nginx.fullname" . }}-nginx
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "atom.labels" . | nindent 4 }}
-    app.kubernetes.io/component: nginx
+    {{- include "atom.component.labels" (list . "nginx") | nindent 4 }}
 spec:
   replicas: {{ .Values.nginx.replicaCount }}
   selector:
     matchLabels:
-      {{- include "atom.selectorLabels" . | nindent 6 }}
-      app.kubernetes.io/component: nginx
+      {{- include "atom.component.selectorLabels" (list . "nginx") | nindent 6 }}
   template:
     metadata:
       labels:
-        {{- include "atom.selectorLabels" . | nindent 8 }}
-        app.kubernetes.io/component: nginx
+        {{- include "atom.component.selectorLabels" (list . "nginx") | nindent 8 }}
     spec:
       {{- with .Values.global.imagePullSecrets }}
       imagePullSecrets:
@@ -91,3 +89,4 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+{{- end }}
