--- a/templates/deployments/deploy-atom.yaml
+++ b/templates/deployments/deploy-atom.yaml
@@ -16,13 +16,7 @@ spec:
       labels:
         {{- include "atom.component.selectorLabels" (list . "atom") | nindent 8 }}
     spec:
-      serviceAccountName: {{ include "atom.serviceAccountName" . }}
-{{/**
-      # {{- if .Values.podSecurityContext.enabled }}
-      # securityContext:
-      #   {{- omit .Values.podSecurityContext "enabled" | toYaml | nindent 8 }}
-      # {{- end }}
-*/}}
+      serviceAccountName: {{ .Values.security.serviceAccountAnyUID.name }}
       containers:
         - name: atom
           image: "{{ .Values.atom.image.repository }}:{{ .Values.atom.image.tag }}"
@@ -54,38 +48,18 @@ spec:
                   name: {{ include "atom.fullname" . }}-mysql-secrets
                   key: ATOM_MYSQL_PASSWORD
             - name: ATOM_MYSQL_DSN
-              secretKeyRef:
+              valueFrom:
+                secretKeyRef:
                   name: {{ include "atom.fullname" . }}-mysql-secrets
                   key: ATOM_MYSQL_DSN
             {{- end }}
-            {{- if .Values.elasticsearch.enabled }}
+            {{- if and .Values.elasticsearch .Values.elasticsearch.enabled }}
             - name: ATOM_ELASTICSEARCH_HOST
               value: {{ include "atom.fullname" . }}-elasticsearch
             {{- end }}
+            {{- if .Values.atom.env }}
             {{- toYaml .Values.atom.env | nindent 12 }}
-            {{- toYaml .Values.atom.env | nindent 12 }}
-{{/**
-          # {{- if .Values.atom.livenessProbe.enabled }}
-          # livenessProbe:
-          #   tcpSocket:
-          #     port: php-fpm
-          #   initialDelaySeconds: {{ .Values.atom.livenessProbe.initialDelaySeconds }}
-          #   periodSeconds: {{ .Values.atom.livenessProbe.periodSeconds }}
-          #   timeoutSeconds: {{ .Values.atom.livenessProbe.timeoutSeconds }}
-          #   failureThreshold: {{ .Values.atom.livenessProbe.failureThreshold }}
-          #   successThreshold: {{ .Values.atom.livenessProbe.successThreshold }}
-          # {{- end }}
-          # {{- if .Values.atom.readinessProbe.enabled }}
-          # readinessProbe:
-          #   tcpSocket:
-          #     port: php-fpm
-          #   initialDelaySeconds: {{ .Values.atom.readinessProbe.initialDelaySeconds }}
-          #   periodSeconds: {{ .Values.atom.readinessProbe.periodSeconds }}
-          #   timeoutSeconds: {{ .Values.atom.readinessProbe.timeoutSeconds }}
-          #   failureThreshold: {{ .Values.atom.readinessProbe.failureThreshold }}
-          #   successThreshold: {{ .Values.atom.readinessProbe.successThreshold }}
-          # {{- end }}
-*/}}
+            {{- end }}
           resources:
             {{- toYaml .Values.atom.resources | nindent 12 }}
           volumeMounts:
@@ -97,12 +71,6 @@ spec:
               mountPath: /atom/src/vendor/composer
             - name: npm-deps
               mountPath: /atom/src/node_modules
-{{/**
-          # {{- if .Values.securityContext.enabled }}
-          # securityContext:
-          #   {{- omit .Values.securityContext "enabled" | toYaml | nindent 12 }}
-          # {{- end }}
-*/}}
       volumes:
         - name: uploads
           persistentVolumeClaim:
@@ -113,7 +81,7 @@ spec:
         - name: composer-deps
           persistentVolumeClaim:
             claimName: {{ include "atom.fullname" . }}-composer-deps-pvc
-        - name: npm_deps
+        - name: npm-deps
           persistentVolumeClaim:
             claimName: {{ include "atom.fullname" . }}-npm-deps-pvc
       {{- with .Values.nodeSelector }}
