--- a/templates/configmap.yaml
+++ b/templates/configmap.yaml
@@ -31,8 +31,8 @@ data:
   nginx.conf: |
     user nginx;
     worker_processes auto;
-    error_log /var/log/nginx/error.log warn;
-    pid /var/run/nginx.pid;
+    error_log /dev/stderr warn;
+    pid /tmp/nginx.pid;
 
     events {
       worker_connections 1024;
@@ -46,17 +46,17 @@ data:
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-      access_log /var/log/nginx/access.log main;
+      access_log /dev/stdout main;
       sendfile on;
       keepalive_timeout 65;
       gzip on;
 
       upstream atom {
-        server {{ include "atom.fullname" . }}:9000;
+        server {{ include "atom.fullname" . }}-atom:9000;
       }
 
       server {
-        listen 80;
+        listen 8080;
         root /atom/src;
         server_name _;
         client_max_body_size 72M;
