--- a/templates/deployments/deploy-nginx.yaml
+++ b/templates/deployments/deploy-nginx.yaml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "atom.nginx.fullname" . }}-nginx
+  name: {{ include "atom.fullname" . }}-nginx
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "atom.component.labels" (list . "nginx") | nindent 4 }}
@@ -16,22 +16,14 @@ spec:
       labels:
         {{- include "atom.component.selectorLabels" (list . "nginx") | nindent 8 }}
     spec:
-      {{- with .Values.global.imagePullSecrets }}
-      imagePullSecrets:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
       serviceAccountName: {{ include "atom.serviceAccountName" . }}
-      {{- if .Values.podSecurityContext.enabled }}
-      securityContext:
-        {{- omit .Values.podSecurityContext "enabled" | toYaml | nindent 8 }}
-      {{- end }}
       containers:
         - name: nginx
-          image: {{ include "atom.nginx.image" . }}
+          image: "{{ .Values.nginx.image.repository }}:{{ .Values.nginx.image.tag }}"
           imagePullPolicy: {{ .Values.nginx.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: 80
+              containerPort: 8080
               protocol: TCP
           livenessProbe:
             httpGet:
@@ -63,14 +55,10 @@ spec:
             - name: cache
               mountPath: /atom/src/cache
               readOnly: true
-          {{- if .Values.securityContext.enabled }}
-          securityContext:
-            {{- omit .Values.securityContext "enabled" | toYaml | nindent 12 }}
-          {{- end }}
       volumes:
         - name: nginx-config
           configMap:
-            name: {{ include "atom.nginx.fullname" . }}-config
+            name: {{ include "atom.fullname" . }}-nginx-config
         - name: uploads
           persistentVolumeClaim:
             claimName: {{ include "atom.fullname" . }}-uploads-pvc
