--- a/templates/services/svc-nginx.yaml
+++ b/templates/services/svc-nginx.yaml
@@ -7,10 +7,9 @@ metadata:
   labels:
     {{- include "atom.component.labels" (list . "nginx") | nindent 4 }}
 spec:
-  type: {{ .Values.nginx.service.type }}
   ports:
-    - port: {{ .Values.nginx.service.port }}
-      targetPort: {{ .Values.nginx.service.targetPort }}
+    - port: 8080
+      targetPort: 9000
       protocol: TCP
       name: http
   selector:
