--- a/values.yaml
+++ b/values.yaml
@@ -56,9 +56,9 @@ atom:
   enabled: true
   replicas: 1
   image:
-    repository: "atom"
+    repository: "registry.prodest.es.gov.br/sgint/atom"
     pullPolicy: Always
-    tag: "2.9.0"
+    tag: "latest"
   env:
     # - name: ATOM_DEVELOPMENT_MODE
     #   value: on"
@@ -78,11 +78,11 @@ atom:
     #   value: atom_12345
   resources:
     limits:
-      cpu: 2000m
-      memory: 4Gi
-    requests:
       cpu: 1000m
       memory: 2Gi
+    requests:
+      cpu: 100m
+      memory: 500Mi
 
 ################################################################################
 #                   Configurações AtoM worker                                  #
@@ -90,33 +90,45 @@ atom:
 atomWorker:
   enabled: true
   replicas: 1
-
+  image:
+    repository: "registry.prodest.es.gov.br/sgint/atom"
+    pullPolicy: Always
+    tag: "latest"
+  env:
+    # - name: ATOM_DEVELOPMENT_MODE
+    #   value: on"
+    # - name: NODE_ENV
+    #   value: development
+    - name: ATOM_ELASTICSEARCH_HOST
+      value: "10.242.94.10"
   resources:
     limits:
       cpu: 1000m
-      memory: 2Gi
-    requests:
-      cpu: 500m
       memory: 1Gi
+    requests:
+      cpu: 100m
+      memory: 500Mi
 
 ################################################################################
 #                   Configurações Nginx                                        #
 ################################################################################
 
 nginx:
-  enabled: false
+  enabled: true
   replicas: 1
+  image:
+    repository: "registry.prodest.es.gov.br/docker/nginxinc/nginx-unprivileged"
+    pullPolicy: Always
+    tag: "latest"
 
   resources:
     limits:
       cpu: 1000m
       memory: 512Mi
     requests:
-      cpu: 500m
+      cpu: 100m
       memory: 256Mi
 
-  route:
-    host: "atom-prod"
 
 ################################################################################
 #                   Configurações MySQL                                        #
@@ -141,22 +153,24 @@ mysql:
     password: "atom_12345"
     rootPassword: "root_password"
 
-  # URL de conexão para o Storage Service
-  ss_db_url: "mysql://archivematica:archivematica@archivematica-mysql:3306/SS"
-
   resources:
     limits:
-      cpu: 4000m
-      memory: 8Gi
-    requests:
       cpu: 2000m
-      memory: 4Gi
+      memory: 1Gi
+    requests:
+      cpu: 500m
+      memory: 500Mi
 
   persistence:
     enabled: true
     size: 1Gi
     accessMode: ReadWriteOnce
 
+#                   Configurações elasticsearch                                    #
+################################################################################
+
+elasticsearch:
+  enabled: false
 
 ################################################################################
 #                   Configurações Memcached                                    #
@@ -187,10 +201,10 @@ gearmand:
   replicas: 1
   resources:
     limits:
-      cpu: 1000m
+      cpu: 500m
       memory: 1Gi
     requests:
-      cpu: 500m
+      cpu: 100m
       memory: 512Mi
   image:
     repository: artefactual/gearmand
